media/css/base.css
/* CSS3 valid */
*{
	margin:0px;
	padding:0px;
}

p{
	margin:10px 0px;
}

a{
	text-decoration:none;
	color:blue;
}

img{
	border:none;
}

img.tikz{
	margin-left:25px;
	padding:10px;
}

ul.simple li{
	margin:10px 30px;
}

/* TODO: rindondante */
img.inline{
	margin:0px;
	padding:0px;
}

#header #logo{
	margin:15px;
}

#header .validator{
	float:right;
}

#footer{
	clear:both;
	text-align:center;
}

#loader{
	display:none;
	position:fixed;
	top:0px;
}

ul.navbar{
	text-align:right;
	font-weight:bold;
	padding-right:50px;
}

ul.navbar li{
	display:inline;
	padding:2px 5px;
	font-weight:bold;
}

ul.navbar li a{
}

.pagination {
	text-align:center;
}

#content{
	width:800px;
	min-height:400px;
	margin:auto;
	margin-top:50px;
}

#content #central {
	width:500px;
	float:left;
}

#content #trackback {
	width:500px;
	margin:auto;
	padding-top:10px;
	padding-bottom:10px;
	border-top:1px solid #cccccc;
}

#content #trackback li {
	margin-left:40px;
}

#content #sidebar {
	float:right;
	width:250px;
}


#content #sidebar li {
	list-style-type: none;
}

#sidebar h3 {
	background-color:#9090ff;
	padding:5px 10px 5px;
	-moz-border-radius:5px;
}

.post{
	margin-bottom:40px;
}

.post h3{
	font-style:italic;
	font-weight:normal;
	font-size:1em;
	text-align:center;
}

.post h3.bozza{
	background-color:rgb(255, 0, 0);
	opacity:0.6;
}

table.citation {
	border-top:1px solid black;
}

.post .tag_list{
	font-family:"Delicious SmallCaps";
	text-align:right;
}
.gravatar{
	float:left;
	margin:0px 10px 10px 0px;
	height:40px;
}

#drag_zone{
	text-align:center;
	padding:5px;
	border:2px dashed #cccccc;
	-moz-border-radius:10px;
}

#drag_zone:-moz-drag-over{
	background-color:blue;
}

.blog_header, .blog_creation_date{
	text-align:center;
}

.blog_content{
	width:500px;
	margin:auto;
}

#archive_list li.date{
	list-style-type: none;
}

#archive_list li.bozza a{
	color:red;
}

form label{
	font-weight:bold;
}

/* the input for post's title */
form input#id_title{
	width:40em;
}

form #id_tags {
	width:100%;
}

.codeblock{
	padding-bottom:10px;
	padding-top:15px;
	padding-left:10px;
	border-bottom: 1px solid #cccccc;
	border-top: 1px solid #cccccc;
	background:#f0f0f0;
}

/* COMMENTS */
#comment_container{
	width:500px;
	margin:auto;
	border-top:1px solid #cccccc;
}

#comment_container form {
	padding-bottom:15px;
	border-bottom:1px solid #cccccc;
}

#comment_container form label{
	width:150px;
	float:left;
}

label[for="id_honeypot"], #id_honeypot{
	display:none;
}

#comment_container .entry{
	margin-top:50px;
}

